tests/baselines/reference/symbolProperty24.errors.txt
symbolProperty24.ts(6,5): error TS2416: Property '[Symbol.toPrimitive]' in type 'C' is not assignable to the same property in base type 'I'.
  Type '() => string' is not assignable to type '() => boolean'.
    Type 'string' is not assignable to type 'boolean'.


==== symbolProperty24.ts (1 errors) ====
    interface I {
        [Symbol.toPrimitive]: () => boolean;
    }
    
    class C implements I {
        [Symbol.toPrimitive]() {
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2416: Property '[Symbol.toPrimitive]' in type 'C' is not assignable to the same property in base type 'I'.
!!! error TS2416:   Type '() => string' is not assignable to type '() => boolean'.
!!! error TS2416:     Type 'string' is not assignable to type 'boolean'.
            return "";
        }
    }